--- a/css/selector.css
+++ b/css/selector.css
@@ -24,11 +24,10 @@
 	float:left;
 	/* box-shadow: 0px 0px 0px 1px #aaa, 1px 0px 0px 0px rgba(255,255,255,0.9) inset, 0px 1px 2px rgba(0,0,0,0.2); */
 }
-@media only screen and (min-width: 405px) {
-  .ff-container label {
-    font-size: 13px;    
-  }
-}
+/* @media only screen and (max-width: 405px) {\n  .ff-container label { */
+/*     font-size: 13px;     */
+/*   } */
+/* } */
 
 .ff-container label.ff-label-type-all{
 	border-radius: 3px 0px 0px 3px;
@@ -70,14 +69,13 @@
 	width: 160px;
 	height: 120px;
 }
-@media only screen and (min-width: 405px) {
-  .ff-items a {
-    padding: 2px;
-    margin: 5px;
-    width: 80px;
-    height: 60px;
-  }
-}
+/* @media only screen and (max-width: 405px) {\n  .ff-items a { */
+/*     padding: 2px; */
+/*     margin: 5px; */
+/*     width: 80px; */
+/*     height: 60px; */
+/*   } */
+/* } */
 
 .ff-items a span {
 	display: block;
@@ -101,25 +99,23 @@
 	-ms-transition: all 0.3s ease-out;
 	transition: all 0.3s ease-out;
 }
-@media only screen and (min-width: 405px) {
-  .ff-items a span {
-    padding: 10px;
-    bottom: 2px;
-    left: 2px;
-    width: 60px;
-    font-size: 7px;
-  }
-}
+/* @media only screen and (max-width: 405px) {\n  .ff-items a span { */
+/*     padding: 10px; */
+/*     bottom: 2px; */
+/*     left: 2px; */
+/*     width: 60px; */
+/*     font-size: 7px; */
+/*   } */
+/* } */
 
 .ff-items a:hover span {
 	height: 80px;
 	opacity: 1;
 }
-@media only screen and (min-width: 405px) {
-  .ff-items a:hover span {
-    height: 40px;
-  }
-}
+/* @media only screen and (max-width: 405px) {\n  .ff-items a:hover span { */
+/*     height: 40px; */
+/*   } */
+/* } */
 
 .ff-items li img{
 	display: block;
@@ -136,12 +132,11 @@
 	-ms-transition: all 0.6s ease-in-out;
 	transition: all 0.6s ease-in-out;
 }
-@media only screen and (min-width: 405px) {
-  .ff-items li {
-    width: 94px;
-    height: 74px;
-  }
-}
+/* @media only screen and (max-width: 405px) {\n  .ff-items li { */
+/*     width: 94px; */
+/*     height: 74px; */
+/*   } */
+/* } */
 
 .ff-container input.ff-selector-type-1:checked ~ .ff-items .ff-item-type-1,
 .ff-container input.ff-selector-type-2:checked ~ .ff-items .ff-item-type-2,
@@ -172,11 +167,10 @@
 .thumb-img {
   width: 160px;
 }
-@media only screen and (min-width: 405px) {
-.thumb-img {
-    width: 80px;
-  }
-}
+/* @media only screen and (max-width: 405px) {\n.thumb-img { */
+/*     width: 80px; */
+/*   } */
+/* } */
 
 .clr{
   clear: both;
